# Audio-to-text-bot

./: .gitignore  Dockerfile.bot  Dockerfile.couchdb  Dockerfile.postprocess  Dockerfile.preprocess  Dockerfile.process  Dockerfile.whisper  README.md  config.py  docker-compose.yml  environment_droplet.yml  local.ini  poetry.toml  pyproject.toml
.github/workflows/: main.yml
src/: config.py  logging.py  main.py
src/audio/: audio.py
src/bot/: bot.py
src/rabbitmq/: couchdb.py  minio.py  mongo.py  postprocess_worker.py  preprocess_producer.py  preprocess_worker.py  process_worker.py  rabbitmq.py
src/routers/: links.py  schemas.py
src/whisper/: whisper_transcribe.py
tests/: conftest.py  test_audio.py
