[tool.poetry]
name = "audio-to-text-bot"
version = "0.1.0"
description = ""
authors = ["Ekaterina Lubyankina <katylubyankina@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytelegrambotapi = "^4.12.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
