[tool.poetry]
name = "audio-to-text-bot"
version = "0.1.0"
description = ""
authors = ["Ekaterina Lubyankina <katylubyankina@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytelegrambotapi = "^4.12.0"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
validators = "^0.20.0"
isort = "^5.12.0"
black = "^23.7.0"
pyproject-flake8 = "^6.0.0.post1"
pytube = "^15.0.0"
moviepy = "^1.0.3"
pika = "^1.3.2"
minio = "^7.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
